@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [PORTAL] [IDP] Refresh token validation with multiple IDP
 - [FRONTEND] Disable log condition if log forwarder disabled
 - [REPUTATION_CTX] Invalid headers templating
+- [PORTAL] [SSO] Avoid autologon password retrieval failures
 
 
 ## [2.11.1] - 2023-10-13
